# openstack-samsara

./: .coveragerc  .gitignore  .gitmodules  .gitreview  AUTHORS  CONTRIBUTING.rst  ChangeLog  HACKING.rst  MANIFEST.in  README.md  README.rst  config.py  cpuacct-fix.sh  openstack-common.conf  rebuild_environment.sh  samsara.conf  setup.cfg  tox.ini
.github/workflows/: ci.yml
common/: collector.py
doc/: first_steps.md
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/init/: samsara-cell-collector.conf  samsara-collector.conf  samsara-global-controller.conf  samsara-local-controller.conf  samsara-local-karma-rand.conf  samsara-local-karma.conf
etc/init.d/: samsara-collector
etc/samsara/: rootwrap.conf  samsara.conf  samsara.conf.sample
etc/systemd/: samsara-collector.service  samsara-global-controller.service  samsara-local-controller.service
samples/: app.py  libvirt-dom-handle-example.py  libvirt-example3.py  unix_daemon.sample
samples/libvirt/: host.py
samples/oslo.messaging.test/: consumer.py  producer.py
samsara/: README.md  __init__.py  _i18n.py  config.py  opts.py  paths.py  samsara-run.sh  samsara.conf  utils.py  version.py
samsara/cell_collector/: manager.py
samsara/cmd/: cell_collector.py  collector-agent.py  collector.py  collector_agent.py  conductor.py  global_controller-ib.py  global_controller.py  local_controller.py  monitor.py  periodic_task.py
samsara/collector/: manager.py  opts.py  rpcapi.py
samsara/common/: authenticate.py  baserpc.py  collector.py  config.py  credentials.py  exception.py  manager.py  rootwrapclient.py  rpc.py  service.py  utils.py
samsara/conductor/: manager.py
samsara/conf/: samsara-config-generator.conf  samsara.conf
samsara/context_aware/: __init__.py  base.py  context_processors.py  contexts.py  contexts_deprect.py  contexts_repository.py  entities.py  opts.py  sensors.py  situations.py
samsara/db/: __init__.py  api.py  base.py  migration.py
samsara/drivers/: baremetal.py  openstack.py  virt.py
samsara/global_controller/: __init__.py  manager.py  rpcapi.py
samsara/local_controller/: __init__.py  manager.py  opts.py  rpcapi.py
samsara/monitor/: monitor.py
samsara/objects/: __init__.py  base.py  base_old.py  context_aware.py  fields.py  host.py  host_old.py
samsara/samples/: collector.py  daemon_init.template  libvirt-dom-handler.py  libvirt-dom-memory-handle.py  libvirt-sample.py
tests/: fake_contexts.py  simulate_consolidation.py  test_samsara.py  utils.py
tools/: clean-experiment.sh  clear_environment.sh  cpuacct-fix.sh  create-nova-network-subnet-10-lups.sh  create-nova-network-subnet-192.sh  export-experiment.sh  get-nova-creds.sh  reboot-nodes-experiment.sh  rebuild.sh  rebuild_compute_node.sh  rebuild_controller_node.sh  rebuild_environment.sh  reinstall_environment.sh  restart-samsara.sh  run-experiments-baseline.sh  run-experiments-nonrandom-workloads.sh  run-experiments.sh  start-experiment.sh  start-nova.sh  start-samsara.sh  stop-experiment.sh  stop-nova.sh  stop-samsara.sh  view-vms-per-node.sh  wake-nodes-experiment.sh
vagrant/: README.md  Vagrantfile  clean.sh  redo.sh  run.sh
vagrant_old/: Vagrantfile  cirros.xml
(+253 files in other folders)
