[metadata]
name = samsara
version = 0.1.0
summary = OpenStack Samsara: An Energy Aware Architecture for VM Consolidation
description-file =
    README.rst
author = Vilnei Neves
author-email = vilnei.neves@inf.ufpel.edu.br
home-page = http://www.openstack.org/
classifier =
    Development Status :: 2 - Pre-Alpha
	    Intended Audience :: Information Technology
	    Intended Audience :: System Administrators
	    License :: OSI Approved :: Apache Software License
	    Operating System :: POSIX :: Linux
	    Programming Language :: Python
	    Programming Language :: Python :: 2
	    Programming Language :: Python :: 2.7
	    Programming Language :: Python :: 3
	    Programming Language :: Python :: 3.3
	    Programming Language :: Python :: 3.4

[global]
setup-hooks =
	pbr.hooks.setup_hook

[files]
packages =
    samsara

data_files =
    /etc/samsara = etc/samsara/*
    /etc/init.d = etc/init.d/*

[entry_points]
oslo_config.opts =
	samsara = samsara.opts:list_opts
    samsara.context_aware = samsara.context_aware.opts:list_opts
    samsara.collector = samsara.collector.opts:list_opts
    samsara.local_controller = samsara.local_controller.opts:list_opts

console_scripts =
    samsara-collector = samsara.cmd.collector:main
    samsara-global-controller = samsara.cmd.global_controller:main
    samsara-local-controller = samsara.cmd.local_controller:main
    samsara-rootwrap = oslo_rootwrap.cmd:main
    samsara-rootwrap-daemon = oslo_rootwrap.cmd:daemon

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = samsara/locale
domain = samsara

[update_catalog]
domain = samsara
output_dir = samsara/locale
input_file = samsara/locale/samsara.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = samsara/locale/samsara.pot
